# idfk

./: CMakeCache.txt  CMakeLists.txt  Makefile  PijamaCLI  README.md  cmake_install.cmake  pijama.yaml  run.sh
src/: main.cpp
